--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@
 
     .container{
     display: flex;
-    justify-content: space-between;
+    justify-content:space-around;
 } 
 
 body{
@@ -50,7 +50,7 @@ body{
     margin-right: 16px;
     font-size: 18px;
     flex: 1;
-    
+    margin-top: 10px;
 }
 
 .serach button{
@@ -64,6 +64,7 @@ body{
     border-radius: 30%;
     cursor: pointer;
     margin-right: 20px;
+    margin-top: 10px;
 }
 
 .serach button img{
@@ -79,6 +80,14 @@ body{
     font-size:60px;
     font-weight: 500;
     
+}
+
+.card .app-line{
+    font-size:22px;
+    font-weight: 500;
+    
+    
+   
 }
 
 .weather h2{
@@ -125,8 +134,82 @@ body{
 /* --------------------end------------------- */
 
 
-/* --------------------start------------------- */
-/* --------------------end------------------- */
+/* --------------------speech-converte start------------------- */
+
+.speech-converter{
+    display: flex;
+    align-items: center;
+    justify-content:center ;
+    flex-direction: column;
+}
+
+.speech-converter h1{
+    font-size: 40px;
+    font-weight: 500;
+    margin-bottom: 20px;
+    margin-top: -50px;
+    color:#555;
+}
+
+.speech-converter h1 span{
+    color:#eb3d6b;
+}
+.speech-converter textarea{
+    width: 600px;
+    height: 250px;
+    background-image: linear-gradient(to right bottom, #dc8be8, #bf8aec, #9e8aee, #7889ec, #4988e7);
+    color: #fff;
+    font-size: 15px;
+    border: 0;
+    outline: 0;
+    padding: 20px;
+    border-radius: 10px;
+    margin: 30px;
+   
+}
+
+.speech-converter textarea::placeholder{
+    font-size: 16px;
+    color:#fff;
+}
+.speech-converter  .row{
+    width: 600px;
+    display: flex;
+    align-items:center;
+    gap:20px;
+}
+
+.speech-converter button{
+    background:#ff2963;
+    color: #fff;
+    font-size: 16px;
+    padding: 10px 30px;
+    border-radius: 35px;
+    border: 0;
+    outline: 0;
+    cursor: pointer;
+}
+
+.speech-converter button i{
+    margin: 0 10px;
+}
+
+.speech-converter select{
+    flex: 1;
+    background: #938fe0;
+    height: 50px;
+    padding:0 20px;
+    outline:none;
+    border: 0;
+    border-radius: 35px;
+    appearance: none;
+    background-image: url(images/dropdown.png);
+    background-repeat:no-repeat;
+    background-size: 15px;
+    background-position-x: calc(100% - 20px);
+    background-position-y: 20px;
+}
+/* --------------------speech-converte end------------------- */
 
 
 
