--- a/style.css
+++ b/style.css
@@ -2,6 +2,33 @@
 
 /* --------------------start------------------- */
 
+:root{
+    --bg-color:#0B132B;
+    --color:#333;
+}
+body {
+    background-color:var(--bg-color);
+    color:var(--color);
+    transition: background-color 0.3s ease, color 0.3s ease;
+}
+
+.light-theme {
+    background-color: #f0f0f0;
+    color: #333;
+    color: #f0f0f0;
+}
+
+
+#theme-icon {
+    position: fixed;
+    top: 20px;
+    right: 20px;
+    width: 30px;
+    height: 30px;
+    cursor: pointer;
+}
+
+
 *{
     margin: 0;
     padding: 0;
@@ -10,22 +37,17 @@
     text-transform:capitalize;
 }
 
+
 .container{
     display: grid;
     grid-template-columns: auto auto;
     
 } 
 
-body{
-    background-color:#0b132b;
-
-
-    
-}
 
 .card{
     width: 90%;
-    max-width: 400px;
+    max-width:370px;
     color: #fff;
     margin:50px;
     border: 1px solid wheat;
@@ -77,7 +99,7 @@ body{
 
 .weather-icon{
     width: 170px;
-    margin-top: 30px;
+    margin-top:10px;
 }
 
 .weather h1{
@@ -104,7 +126,7 @@ body{
     justify-content: space-between;
     align-items: center;
     padding:0 20px;
-    margin-top: 50px;
+    margin-top:30px;
 }
 
 .col{
@@ -226,7 +248,7 @@ body{
     width: 300px;
     min-height: 400px;
     margin: 20px;
-    border:1px dashed #fff;
+    border:1px dashed #e91e63;
 }
 
 .drag-drop .list{
@@ -263,7 +285,6 @@ body{
 }
 
 /* --------------------drag down end------------------- */
-
 
 
 /* --------------------start------------------- */
